src/Extra.css
/* Login Screen */

.loginScreen {
    width: 100%;
}

.loginScreen h1 {
    width: 100%;
}

.addUserSection {
    display: inline;
    float: left;
    width: 45%;
    padding: 0 2%;
}

.loginSection {
    display: inline;
    float: left;
    width: 45%;
    padding: 0 2%;
}

/* Menu Bar */

.menuBar {
    width: 100%;
}

.menuBar button {
    width: 10%;
    margin: 1% .5%;
    
    display: inline;
    float: left;
}

.menuBar .logoutButton {
    display: inline;
    
    float: right;
}

.menuBar h1 {
    width: 13%;
    display: inline;
    float: left;
}

.search {
    width: 37%;
}

.searchBar {
    width: 25%;
    margin: 0 .5%;

    display: inline;
    float: left;
}

.searchBy {
    width: 10%;
    margin: 0 .5%;

    display: inline;
    float: left;
}

/* Filter panel */

.filterPanel {
    width: 25%;
    padding: 0 20px;
}

/* Movie Card */

.movieCard {
    width: 40%;
    margin: 10px 5%;
    display: inline;
    float: right;
}

/* Checkout Panel */
.checkoutPanel {
    width: 40%;
    padding: 20px;
}

